// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CVTypingChatMessage should render the CV Typing Chat message correctly when CV is uploaded 1`] = `
<div
  class="MuiBox-root css-1c8zvho"
  data-testid="cv-typing-chat-message-container-7fa5c1d3-8b76-4d9f-a422-f35c91e7a2c8"
  origin="COMPASS"
>
  <div
    data-testid="chat-message-bubble-container-6e685eeb-2b54-432a-8b66-8a81633b3981"
  >
    <div
      class="MuiBox-root css-x1sij0"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-1czz4sp-MuiTypography-root"
      >
        Your CV content is in the text field. Review it and send when ready.
      </p>
    </div>
  </div>
</div>
`;

exports[`CVTypingChatMessage should render the CV Typing Chat message correctly when CV is uploading 1`] = `
<div
  class="MuiBox-root css-1c8zvho"
  data-testid="cv-typing-chat-message-container-7fa5c1d3-8b76-4d9f-a422-f35c91e7a2c8"
  origin="COMPASS"
>
  <div
    data-testid="chat-message-bubble-container-6e685eeb-2b54-432a-8b66-8a81633b3981"
  >
    <div
      class="MuiBox-root css-x1sij0"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-1czz4sp-MuiTypography-root"
      >
        Please wait while I upload and parse your CV
      </p>
      <span
        class="MuiBox-root css-sz63p1"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 css-18f2if6-MuiTypography-root"
        >
          .
        </span>
        <span
          class="MuiTypography-root MuiTypography-body1 css-1dvtvwe-MuiTypography-root"
        >
          .
        </span>
        <span
          class="MuiTypography-root MuiTypography-body1 css-4a4pgt-MuiTypography-root"
        >
          .
        </span>
      </span>
    </div>
  </div>
</div>
`;
